--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,6 @@ GEMINI_API_KEY="your_gemini_api_key_here"
 LANGFUSE_PK="your_langfuse_public_key_here"
 LANGFUSE_PK="your_langfuse_public_key_here"
 LANGFUSE_STRING_CONNECTION="http://localhost:3000"
+
+BASE_PATH="path to root folder for raw datasets"
+SCHEMA_DIR="path to schema templates"
