--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,7 @@ langchain_google_genai
 json_repair
 genson
 
+datasets
+
 
 #https://langchain-ai.github.io/langgraph/how-tos/graph-api/#combine-control-flow-and-state-updates-with-command
