--- a/data/glaive_dataset/mapping.json
+++ b/data/glaive_dataset/mapping.json
@@ -2,7 +2,7 @@
   {
     "src_field": "N/A",
     "target_field": "template",
-    "transformation": "fc_chat_st"
+    "transformation": "chat_template"
   },
   {
     "src_field": "N/A",
@@ -11,28 +11,38 @@
   },
   {
     "src_field": "N/A",
-    "target_field": "context",
-    "transformation": "null"
-  },
-  {
-    "src_field": "prompt",
-    "target_field": "messages[0].content",
-    "transformation": "Map the prompt to the content of the first message."
-  },
-  {
-    "src_field": "N/A",
     "target_field": "messages[0].role",
     "transformation": "USER"
   },
   {
-    "src_field": "response",
-    "target_field": "messages[1].content",
-    "transformation": "Map the response to the content of the second message."
+    "src_field": "prompt",
+    "target_field": "messages[0].content",
+    "transformation": "Copy the value of the prompt field to the content field of the first message object."
   },
   {
     "src_field": "N/A",
     "target_field": "messages[1].role",
     "transformation": "ASSISTANT"
+  },
+  {
+    "src_field": "response",
+    "target_field": "messages[1].content",
+    "transformation": "Copy the value of the response field to the content field of the second message object."
+  },
+  {
+    "src_field": "N/A",
+    "target_field": "function_call",
+    "transformation": "null"
+  },
+  {
+    "src_field": "N/A",
+    "target_field": "think",
+    "transformation": "null"
+  },
+  {
+    "src_field": "N/A",
+    "target_field": "context",
+    "transformation": "null"
   },
   {
     "src_field": "N/A",
@@ -46,8 +56,8 @@
   },
   {
     "src_field": "N/A",
-    "target_field": "_filename",
-    "transformation": "null"
+    "target_field": "_file_name",
+    "transformation": "glaive"
   },
   {
     "src_field": "N/A",
