--- a/data/OpenThoughts3-1.2M/mapping.json
+++ b/data/OpenThoughts3-1.2M/mapping.json
@@ -20,16 +20,16 @@
   {
     "src_field": "conversations[].think",
     "target_field": "messages[].think",
-    "transformation": "Copy GPT's thought process."
-  },
-  {
-    "src_field": "N/A",
-    "target_field": "_dataset_name",
-    "transformation": "OpenThoughts3-1.2M"
+    "transformation": "Copy the GPT's thought process."
   },
   {
     "src_field": "N/A",
     "target_field": "_subpath",
     "transformation": "data"
+  },
+  {
+    "src_field": "N/A",
+    "target_field": "_filename",
+    "transformation": "glaive"
   }
 ]
